--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,11 @@ p {
 }
 /* Hero Styles End */
 
+/* Horiseon Services Content Section Styles Start */
+p {
+    font-size: 16px;
+}
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -78,6 +83,27 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+
+.horiseon-services {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.horiseon-services img {
+    max-height: 200px;
+}
+
+.horiseon-services h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+/* Horiseon Services Content Section Styles End */
+
+
 
 .benefits {
     margin-right: 20px;
