--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,13 +132,15 @@ aside {
 }
 /* Benefits Section Styles End */
 
-.footer {
+/* Footer Styles Start */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
+/* Footer Styles End */
